--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "\"프론트엔드 개발 환경의 이해\" 강의 자료입니다.",
   "main": ".eslintrc.js",
   "devDependencies": {
+    "css-loader": "^5.2.7",
+    "file-loader": "^6.2.0",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10"
   },
@@ -20,5 +22,9 @@
   "bugs": {
     "url": "https://github.com/jeonghwan-kim/lecture-frontend-dev-env/issues"
   },
-  "homepage": "https://github.com/jeonghwan-kim/lecture-frontend-dev-env#readme"
+  "homepage": "https://github.com/jeonghwan-kim/lecture-frontend-dev-env#readme",
+  "dependencies": {
+    "style-loader": "^2.0.0",
+    "url-loader": "^4.1.1"
+  }
 }
