--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "devDependencies": {
     "@babel/core": "^7.7.7",
     "@babel/preset-env": "^7.7.7",
-    "babel-loader": "^8.0.6",
+    "babel-loader": "^8.3.0",
     "clean-webpack-plugin": "^3.0.0",
     "core-js": "^2.6.11",
     "css-loader": "^3.4.1",
@@ -33,5 +33,8 @@
     "url": "https://github.com/jeonghwan-kim/lecture-frontend-dev-env/issues"
   },
   "homepage": "https://github.com/jeonghwan-kim/lecture-frontend-dev-env#readme",
-  "dependencies": {}
+  "dependencies": {
+    "sass": "^1.62.1",
+    "sass-loader": "^10.4.1"
+  }
 }
